[Massive]: Add wrapper overflow hidden to avoid any scroll

--- a/SCSS/base/_util.scss
+++ b/SCSS/base/_util.scss
@@ -1,3 +1,9 @@
+// Begin Wrapper
+.wrapper {
+  overflow: hidden;
+}
+// End Wrapper
+
 // Begin Heading
 .heading1,
 .heading2,
